--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Node.js Docker CI/CD
+name: CI
 
 on:
   push:
@@ -7,17 +7,16 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
-    # Service PostgreSQL untuk testing
     services:
       postgres:
-        image: postgres:16
+        image: postgres:15
         env:
-          POSTGRES_DB: crm            # harus statis untuk service container
-          POSTGRES_USER: postgres     # harus statis
-          POSTGRES_PASSWORD: postgres # harus statis
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: crm
         ports:
           - 5432:5432
         options: >-
@@ -27,27 +26,23 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install dependencies
         run: npm install
 
-      - name: Wait for PostgreSQL to be ready
+      - name: Wait for Postgres
         run: |
           until pg_isready -h localhost -p 5432 -U postgres; do
-            echo "Waiting for Postgres..."
+            echo "Waiting for postgres..."
             sleep 2
           done
-
-      - name: Setup database
-        run: |
-          psql postgresql://postgres:postgres@localhost:5432/crm -f db/init.sql
 
       - name: Run tests
         env:
@@ -57,18 +52,3 @@ jobs:
           DB_PASSWORD: postgres
           DB_NAME: crm
         run: npm test
-
-
-      - name: Build Docker image
-        run: docker build -t devgoku69/crm_api:latest .
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push Docker image
-        run: |
-          docker tag devgoku69/crm_api:latest ${{ secrets.DOCKER_USERNAME }}/crm_api:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/crm_api:latest
